Implemented restore and permanent deletion to API and front-end.
